--- a/index.html
+++ b/index.html
@@ -644,6 +644,8 @@
       gap: 12px;
       align-items: center;
       min-height: 320px;
+      max-height: 80vh;
+      overflow-y: auto;
     }
     #device-settings-list {
       width: 90%;
